# lizi_typeless

./: .gitignore  lizi_typeless.slnx
docs/lizi_typeless/: 产品方案.md  技术方案.md  测试验收.md  项目说明.md  项目进度追踪.md
docs/lizi_typeless/voice-input-mvp/: ExecPlan.md
inference/: pyproject.toml
inference/benchmarks/: benchmark_service.py  benchmark_streaming.py  compare_gpu_idle.py  evaluate_dataset.py  manifest.example.jsonl  sample_gpu_idle.py  streaming_client.py  summarize_sessions.py
inference/src/lizi_typeless_inference/: __init__.py  __main__.py  api.py  audio_stream.py  config.py  evaluation.py  prompt.py  runtime.py  vocabulary.py
inference/tests/: test_api.py  test_audio_stream.py  test_evaluation.py  test_prompt.py  test_vocabulary.py
scripts/: download-models.sh  setup-inference.sh  setup-streaming-inference.sh  start-inference.sh
src/lizi_typeless.Core/Hotkeys/: RightAltStateMachine.cs
src/lizi_typeless.Core/Sessions/: SessionModels.cs  SessionStore.cs  SessionTransitions.cs
src/lizi_typeless.Windows/: App.xaml  App.xaml.cs  AppController.cs  AssemblyInfo.cs  MainWindow.xaml  MainWindow.xaml.cs  OverlayWindow.xaml  OverlayWindow.xaml.cs  TrayIconHost.cs  lizi_typeless.Windows.csproj
src/lizi_typeless.Windows/Audio/: RecoverableAudioCapture.cs
src/lizi_typeless.Windows/Inference/: InferenceClient.cs  InferenceServiceManager.cs  StreamingInferenceSession.cs
src/lizi_typeless.Windows/Infrastructure/: AppPaths.cs  (+1 more)
tests/lizi_typeless.Core.Tests/: lizi_typeless.Core.Tests.csproj
tests/lizi_typeless.Windows.Tests/: lizi_typeless.Windows.Tests.csproj
(+8 files in other folders)
